--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lucide-react": "^0.555.0",
     "next": "16.0.4",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-icons": "^4.12.0",
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
