--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "aos": "^3.0.0-beta.6",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
     "lucide-react": "^0.555.0",
-    "next": "16.0.4",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^4.12.0",
     "tailwindcss": "^3.3.0"
   },
