--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "aos": "^3.0.0-beta.6",
     "emailjs-com": "^3.2.0",
+    "firebase": "^12.7.0",
     "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
     "lucide-react": "^0.555.0",
