--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "aos": "^3.0.0-beta.6",
+    "boxicons": "^2.1.4",
     "emailjs-com": "^3.2.0",
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.24",
