--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "npm run dev",
-    "lint": "eslint"
+    "start": "next start", 
+    "lint": "next lint"     
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -17,24 +17,23 @@
     "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
     "lucide-react": "^0.555.0",
-    "next": "^16.0.7",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "react-icons": "^4.12.0",
-    "tailwindcss": "^3.3.0"
+    "next": "14.2.26",         
+    "react": "18.3.1",          
+    "react-dom": "18.3.1",      
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "autoprefixer": "^10.4.22",
     "baseline-browser-mapping": "^2.8.32",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.4",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.26", 
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^3.4.17",        
     "typescript": "^5"
   }
 }
