--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,35 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.26",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "aos": "^3.0.0-beta.6",
     "boxicons": "^2.1.4",
     "emailjs-com": "^3.2.0",
     "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
     "lucide-react": "^0.555.0",
+    "next": "14.2.26",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-icons": "^4.12.0"
   },
   "devDependencies": {
-    "typescript": "5.9.3",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.26",
-
+    "@tailwindcss/postcss": "^4",
+    "@types/aos": "^3.0.7",
     "@types/node": "20.19.27",
     "@types/react": "18.3.27",
     "@types/react-dom": "^18",
-
-    "tailwindcss": "^3.4.17",
-    "postcss": "^8.5.6",
     "autoprefixer": "^10.4.22",
-    "@tailwindcss/postcss": "^4",
-
-    "@types/aos": "^3.0.7",
-    "baseline-browser-mapping": "^2.8.32"
+    "baseline-browser-mapping": "^2.8.32",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.26",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "5.9.3"
   }
 }
